// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Proposals/List matches snapshot 1`] = `
<div
  className="tss-1twmwxn-root"
  id="Box"
>
  <div
    className="tss-14mpgd5-topContent"
  >
    <div
      className="tss-1xbqq1r-total"
      id="Total"
      total="2"
    />
  </div>
  <div
    className="tss-l0czsq-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 200,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      >
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="tss-8bkbz1-root"
            >
              <div
                className="tss-wxblv8-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 tss-1o32tk6-id mui-15yyl88-MuiTypography-root"
                >
                  #3
                </h4>
                <span
                  className="tss-y4sl71-mobile"
                >
                  <div
                    className="tss-1uw8c3v-root-four"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
                    >
                      passed
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="tss-11049aw-title"
                >
                  <a
                    className="MuiTypography-root MuiTypography-h3 value mui-1kl9mnf-MuiTypography-root"
                    href="/proposals/3"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Staking Param Change Part Three
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 tss-1whmzoy-content mui-1bkilrq-MuiTypography-root"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="tss-1d2xof0-desktop"
              >
                <div
                  className="tss-1uw8c3v-root-four"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
                  >
                    passed
                  </p>
                </div>
              </span>
            </div>
            <hr
              className="MuiDivider-root MuiDivider-fullWidth mui-l3fh2f-MuiDivider-root"
            />
          </div>
        </div>
        <div
          style={
            {
              "height": 100,
              "left": 0,
              "position": "absolute",
              "right": undefined,
              "top": 100,
              "width": "100%",
            }
          }
        >
          <div>
            <div
              className="tss-8bkbz1-root"
            >
              <div
                className="tss-wxblv8-header"
              >
                <h4
                  className="MuiTypography-root MuiTypography-h4 tss-1o32tk6-id mui-15yyl88-MuiTypography-root"
                >
                  #7
                </h4>
                <span
                  className="tss-y4sl71-mobile"
                >
                  <div
                    className="tss-117ggys-root-five"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
                    >
                      rejected
                    </p>
                  </div>
                </span>
              </div>
              <div>
                <div
                  className="tss-11049aw-title"
                >
                  <a
                    className="MuiTypography-root MuiTypography-h3 value mui-1kl9mnf-MuiTypography-root"
                    href="/proposals/7"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onTouchStart={[Function]}
                  >
                    Staking Param Change Part Two
                  </a>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-body2 tss-1whmzoy-content mui-1bkilrq-MuiTypography-root"
                >
                  Update max validators
                </p>
              </div>
              <span
                className="tss-1d2xof0-desktop"
              >
                <div
                  className="tss-117ggys-root-five"
                >
                  <p
                    className="MuiTypography-root MuiTypography-body1 mui-pfovru-MuiTypography-root"
                  >
                    rejected
                  </p>
                </div>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`screen: Proposals/List matches snapshot with empty proposal list 1`] = `
<div
  className="tss-1twmwxn-root"
  id="Box"
>
  <div
    className="tss-14mpgd5-topContent"
  >
    <div
      className="tss-1xbqq1r-total"
      id="Total"
      total="0"
    />
  </div>
  <div
    className="tss-l0czsq-list"
  >
    <div
      className="List"
      onScroll={[Function]}
      style={
        {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 600,
          "overflow": "auto",
          "position": "relative",
          "width": 600,
          "willChange": "transform",
        }
      }
    >
      <div
        style={
          {
            "height": 0,
            "pointerEvents": undefined,
            "width": "100%",
          }
        }
      />
    </div>
  </div>
</div>
`;
